--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.1.3",
     "ngx-cookie-service": "^19.1.2",
+    "papaparse": "^5.5.3",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -31,6 +33,8 @@
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/papaparse": "^5.3.16",
+    "@types/xlsx": "^0.0.35",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
