--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.1.3",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
-    "jspdf-autotable": "^5.0.2",
     "ngx-cookie-service": "^19.1.2",
     "papaparse": "^5.5.3",
+    "pdfmake": "^0.2.20",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
@@ -37,6 +35,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/papaparse": "^5.3.16",
+    "@types/pdfmake": "^0.2.11",
     "@types/xlsx": "^0.0.35",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
